Fix maintainability in property service